--- a/seckill-web-admin/src/main/resources/static/assets/css/app.less
+++ b/seckill-web-admin/src/main/resources/static/assets/css/app.less
@@ -1719,6 +1719,14 @@ text-align: right;
             color:#fff;
         }
     }
+     a.tpl-table-black-operation-enable {
+         border: 1px solid #8af32d;
+         color: #7bf31c;
+         &:hover {
+             background: #5ef323;
+             color:#fff;
+         }
+     }
 }
     .am-table-bordered {
         border: 1px solid #666d70;
